# vidalys-pay

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  RUNBOOK.md  TECHNICAL_DISCOVERY.md  docker-compose.debug.yml  docker-compose.production.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: asgi.py  urls.py  wsgi.py
docker/: entrypoint-web.sh  entrypoint-worker.sh  entrypoint.sh  wait_for_database.py
docs/: API.md  ARCHITECTURE.md  BOLETOS.md  COOLIFY_DEPLOY.md  COOLIFY_QUICKSTART.md  DEPLOYMENT.md  FUTURE_FEATURES.md  PAYMENT_ENGINE_REFACTOR.md  README.md  SECURITY.md  TESTING.md  WEBHOOKS.md  openapi.json
static/: manifest.webmanifest  offline.html  sw.js
tests/: conftest.py  test_activation_flow.py  test_api_contract.py  test_boletos_api.py  test_boletos_cnpj.py  test_boletos_creation.py  test_boletos_domain.py  test_boletos_notifications.py  test_boletos_panel.py  test_boletos_webhooks.py  test_deployment_compose.py  test_format_brl.py  test_freight_rewrite.py  test_health.py  test_pagarme_credentials.py  test_payment_links_models.py  test_production_hardening.py  test_push_notifications.py  test_seller_drff_auth.py  test_sellers_models.py  test_sellers_services.py  test_wait_for_database.py  test_whatsapp_dual_delivery.py
vidalys_pay_documentacao_final/: 00_README.md  01_PRD.md  02_ARQUITETURA.md  03_FLUXOS_E_ESTADOS.md  04_MODELO_DE_DADOS.md  05_SEGURANCA_E_ACESSO.md  06_CONTRATOS_API.md  07_INTEGRACOES.md  08_UI_UX_E_PWA.md  09_DEPLOY_COOLIFY.md  10_TESTES_E_ACEITE.md  (+7 more)
(+175 files in other folders)
