[project]
name = "vidalys-pay"
version = "0.1.0"
description = "Links de pagamento internos para vendedores Vidalys"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15,<4.0",
    "django-environ>=0.11,<1.0",
    "gunicorn>=22,<23",
    "httpx>=0.27,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "whitenoise>=6.0,<7.0",
    "pywebpush>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "pytest>=8,<9",
    "pytest-django>=4,<5",
    "pytest-cov>=5,<6",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
addopts = "--strict-markers -v"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring database",
]

[tool.coverage.run]
source = ["apps", "config"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
